--- a/app/src/main/res/layout/item_1.xml
+++ b/app/src/main/res/layout/item_1.xml
@@ -7,9 +7,10 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="right"
             android:padding="16dp"
             android:text="Pankaj" />
     </LinearLayout>
